<resources>
    <string name="app_name">MovieSampleMVVM</string>

    <!--main_activity-->
    <string name="movie_year">Year</string>
    <string name="movie_country">Country</string>
    <string name="movie_length">Length</string>
    <string name="movie_seasons">Seasons</string>

    <!--row_episode_list-->
    <string name="episode_title">Title : </string>
    <string name="episode_number">Episode : </string>
    <string name="episode_released">Released : </string>
    <string name="episode_imdbrating">IMD : </string>

    <!--episode detail activity-->
    <string name="episode_director">Director : </string>
    <string name="episode_writer">Writer : </string>
    <string name="episode_actors">Actors : </string>
    <string name="episode_plot">Plot : </string>

    <!--message-->
    <string name="message_offline">offline mode...</string>
    <string name="message_online">online mode...</string>
    <string name="message_not_network_connection">please connect to network!!</string>

</resources>
