<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="episodeDetailVM"
            type="com.github.fatemehmsp.movie.viewmodel.EpisodeDetailViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.github.fatemehmsp.movie.ui.activity.MainActivity">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/episodeLoading"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/colorAccent"
            app:indicatorName="BallPulseIndicator"
            app:isVisible="@{episodeDetailVM.loadingProgressBar}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include layout="@layout/toolbar_main" />

        <ScrollView
            android:id="@+id/episodeParent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/distance_medium"
            app:isVisible="@{!episodeDetailVM.loadingProgressBar}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarMain">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/episodeCardImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/distance_normal"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="2dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/episodeImg"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@{String.valueOf(episodeDetailVM.movieData.poster)}" />

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/episodeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeCardImg"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/distance_normal"
                    android:text="@{episodeDetailVM.movieData.title}"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/textSize_medium"
                    tools:text="Movie Title" />

                <TextView
                    android:id="@+id/episodeGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/distance_normal"
                    android:layout_marginRight="@dimen/distance_normal"
                    android:text="@{episodeDetailVM.movieData.genre}"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/textSize_small"
                    tools:text="Movie Genre" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/episodeInfoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeGenre"
                    android:layout_marginLeft="@dimen/distance_medium"
                    android:layout_marginTop="@dimen/distance_medium"
                    android:layout_marginRight="@dimen/distance_medium"
                    android:layout_marginBottom="@dimen/distance_medium"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/episodeYearTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_year"
                        android:textColor="@color/secondaryText"
                        android:textSize="@dimen/textSize_normal"
                        app:layout_constraintEnd_toStartOf="@id/episodeCountryTxt"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/episodeYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{episodeDetailVM.movieData.year}"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/textSize_normal"
                        app:layout_constraintEnd_toStartOf="@id/episodeCountryTxt"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/episodeYearTxt"
                        tools:text="2019" />


                    <TextView
                        android:id="@+id/episodeCountryTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_country"
                        android:textColor="@color/secondaryText"
                        android:textSize="@dimen/textSize_normal"
                        app:layout_constraintEnd_toStartOf="@id/episodeLengthTxt"
                        app:layout_constraintStart_toEndOf="@id/episodeYearTxt" />

                    <TextView
                        android:id="@+id/episodeCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{episodeDetailVM.movieData.country}"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/textSize_normal"
                        app:layout_constraintEnd_toStartOf="@id/episodeLengthTxt"
                        app:layout_constraintStart_toEndOf="@id/episodeYearTxt"
                        app:layout_constraintTop_toBottomOf="@id/episodeCountryTxt"
                        tools:text="USA" />

                    <TextView
                        android:id="@+id/episodeLengthTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_length"
                        android:textColor="@color/secondaryText"
                        android:textSize="@dimen/textSize_normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/episodeCountryTxt" />

                    <TextView
                        android:id="@+id/episodeLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{episodeDetailVM.movieData.runtime}"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/textSize_normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/episodeCountryTxt"
                        app:layout_constraintTop_toBottomOf="@id/episodeLengthTxt"
                        tools:text="180" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--episodeDirector-->
                <TextView
                    android:id="@+id/episodeDirectorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeInfoLayout"
                    android:layout_margin="@dimen/distance_normal"
                    android:text="@string/episode_director"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/textSize_normal" />

                <TextView
                    android:id="@+id/episodeDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeInfoLayout"
                    android:layout_alignBaseline="@id/episodeDirectorTxt"
                    android:layout_marginRight="@dimen/distance_normal"
                    android:layout_toRightOf="@id/episodeDirectorTxt"
                    android:text="@{episodeDetailVM.movieData.director}"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/textSize_normal"
                    tools:text="Director" />

                <!--episodeWriter-->
                <TextView
                    android:id="@+id/episodeWriterTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeDirector"
                    android:layout_margin="@dimen/distance_normal"
                    android:text="@string/episode_writer"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/textSize_normal" />

                <TextView
                    android:id="@+id/episodeWriter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeDirector"
                    android:layout_alignBaseline="@id/episodeWriterTxt"
                    android:layout_marginRight="@dimen/distance_normal"
                    android:layout_toRightOf="@id/episodeWriterTxt"
                    android:text="@{episodeDetailVM.movieData.writer}"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/textSize_normal"
                    tools:text="George R.R. Martin (based on \A Song of Ice and Fire\ by), David Benioff (created by), D.B. Weiss (created by), George R.R. Martin (written for television by" />

                <!--episodeActors-->
                <TextView
                    android:id="@+id/episodeActorsTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeWriter"
                    android:layout_margin="@dimen/distance_normal"
                    android:text="@string/episode_actors"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/textSize_normal" />

                <TextView
                    android:id="@+id/episodeActors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeWriter"
                    android:layout_alignBaseline="@id/episodeActorsTxt"
                    android:layout_marginRight="@dimen/distance_normal"
                    android:layout_toRightOf="@id/episodeActorsTxt"
                    android:text="@{episodeDetailVM.movieData.actors}"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/textSize_normal"
                    tools:text="Actors" />


                <!--episodePlot-->
                <TextView
                    android:id="@+id/episodePlotTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeActors"
                    android:layout_margin="@dimen/distance_normal"
                    android:text="@string/episode_plot"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/textSize_normal" />

                <TextView
                    android:id="@+id/episodePlot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/episodeActors"
                    android:layout_alignBaseline="@id/episodePlotTxt"
                    android:layout_marginRight="@dimen/distance_normal"
                    android:layout_toRightOf="@id/episodePlotTxt"
                    android:text="@{episodeDetailVM.movieData.plot}"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/textSize_normal"
                    tools:text="Plot" />


            </RelativeLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>